Bug 472574 - plasma-nm fails to build with KF6 today
Summary: plasma-nm fails to build with KF6 today
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Networking in general (other bugs)
Version First Reported In: master
Platform: Other Linux
: NOR grave
Target Milestone: 1.0
Assignee: Plasma Bugs List
URL:
Keywords: qt6, regression
Depends on:
Blocks:
 
Reported: 2023-07-24 13:15 UTC by Nate Graham
Modified: 2024-12-23 18:23 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Nate Graham 2023-07-24 13:15:38 UTC
[ 97%] Building CXX object kded/CMakeFiles/kded_networkmanagement.dir/plasma_nm_kded.cpp.o
/home/nate/kde/src/plasma-nm/kded/connectivitymonitor.cpp: In member function ‘void ConnectivityMonitor::connectivityChanged(NetworkManager::Connectivity)’:
/home/nate/kde/src/plasma-nm/kded/connectivitymonitor.cpp:67:39: error: ‘void KNotification::update()’ is private within this context
   67 |                 m_notification->update();
      |                 ~~~~~~~~~~~~~~~~~~~~~~^~
In file included from /home/nate/kde/usr6/include/KF6/KNotifications/KNotification:1,
                 from /home/nate/kde/src/plasma-nm/kded/connectivitymonitor.h:13,
                 from /home/nate/kde/src/plasma-nm/kded/connectivitymonitor.cpp:8:
/home/nate/kde/usr6/include/KF6/KNotifications/knotification.h:642:35: note: declared private here
  642 |     KNOTIFICATIONS_NO_EXPORT void update();
      |                                   ^~~~~~
gmake[2]: *** [kded/CMakeFiles/kded_networkmanagement.dir/build.make:112: kded/CMakeFiles/kded_networkmanagement.dir/connectivitymonitor.cpp.o] Error 1
Comment 1 Bug Janitor Service 2023-07-24 13:39:40 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-nm/-/merge_requests/271
Comment 2 Nicolas Fella 2023-07-24 14:08:25 UTC
Git commit d140b8d7da51fdf54d1add4f75784a15907ec558 by Nicolas Fella.
Committed on 24/07/2023 at 15:39.
Pushed by ngraham into branch 'master'.

Port away from KNotification::update

M  +1    -1    kded/connectivitymonitor.cpp
M  +1    -1    kded/notification.cpp

https://invent.kde.org/plasma/plasma-nm/-/commit/d140b8d7da51fdf54d1add4f75784a15907ec558
Comment 3 Ben Cooksley 2024-12-23 18:23:38 UTC
Bulk transfer as requested in T17796