Port away from KNotification::update

BUG: 472574